Fixes #894 add className prop to SearchButton; add className strings to Search for SearchButton component; collapse scss markup

--- a/src/client/styles/components/Search.scss
+++ b/src/client/styles/components/Search.scss
@@ -19,29 +19,23 @@
   .nypl-omnisearch {
     background-color: #fff;
     margin-left: 0.25rem;
-  }
 
-  .nypl-omnisearch {
     .nypl-omni-fields {
       display: block;
       border-right: 0.08333rem solid #080807;
       float: left;
       width: 28%;
-    }
-  }
 
-  .nypl-omni-fields {
-    input[type=text] {
-      border: 0;
-      border-radius: 0.25rem;
-      font-size: 1rem;
-      padding: 0;
-      margin: 0 1%;
-      text-indent: 0.5rem;
+      input[type=text] {
+        border: 0;
+        border-radius: 0.25rem;
+        font-size: 1rem;
+        padding: 0;
+        margin: 0 1%;
+        text-indent: 0.5rem;
+      }
     }
-  }
 
-  .nypl-omnisearch {
     .nypl-text-field {
       background-color: #fff;
       border-radius: 0.2rem;
@@ -51,39 +45,33 @@
       padding: 0;
       position: relative;
     }
-  }
 
-  // Button specific CSS for submit
+    // Button specific CSS for submit
 
-  .nypl-omnisearch-button-wrapper {
-    display: block;
-  }
+    .nypl-omnisearch-button {
+      font-weight: 200;
+      background: #1B7FA7;
+      border-left: solid 0.0625rem #080807;
+      border-radius: 0;
+      color: #fff;
+      width: 6rem;
+      height: 3rem;
+      float: right;
+      padding-top: 0.6rem;
+      padding-right: 0.8em;
+      text-indent: -1rem;
 
-  .nypl-omnisearch-button {
-    font-weight: 200;
-    background: #1B7FA7;
-    border-left: solid 0.0625rem #080807;
-    border-radius: 0;
-    color: #fff;
-    width: 6rem;
-    height: 3rem;
-    float: right;
-    padding-top: 0.6rem;
-  }
+      svg {
+        fill: #fff;
+        position: relative;
+        float: left;
+        padding-top: 0.3rem;
+      }
 
-  .nypl-omnisearch-button {
-    svg {
-      fill: #fff;
-      position: relative;
-      float: left;
-      padding-top: 0.3rem;
-    }
-  }
-
-  .nypl-omnisearch-button {
-    .nypl-search-icon {
-      background-color: #1B7FA7;
-      speak: none;
+      .nypl-search-icon {
+        background-color: #1B7FA7;
+        speak: none;
+      }
     }
   }
 
@@ -98,9 +86,7 @@
       display: block;
       background-color: transparent;
       border: 0;
-    }
 
-    .nypl-omnisearch {
       .nypl-text-field {
         background-color: #fff;
         border: solid 0.0625rem #080807;
@@ -109,26 +95,21 @@
         box-shadow: none;
         margin: 1rem 0;
       }
-    }
 
-    .nypl-omnisearch {
-      input[type=text] {
-        width: 96%;
-      }
-    }
-
-    .nypl-omnisearch {
       .nypl-omni-fields {
         background: #fff;
         border-right: 0;
         width: 96%;
       }
-    }
 
-    .nypl-omnisearch-button {
-      border: solid 0.0625rem #080807;
-      border-radius: 0.2rem;
-      margin-right: 0.5em;
+      input[type=text] {
+        width: 96%;
+      }
+
+      .nypl-omnisearch-button {
+        border: solid 0.0625rem #080807;
+        border-radius: 0.2rem;
+      }
     }
   }
 }
